add_library(stack STATIC stack.cpp)
target_link_libraries(stack -L${CMAKE_SOURCE_DIR}/lib)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
target_include_directories(stack PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../include)
set_target_properties(stack PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../lib)